--- a/app.json
+++ b/app.json
@@ -87,6 +87,6 @@
       "manager",
       "phoenix"
    ],
-   "name": "Phoenix",
-   "repository": "https://github.com/rsktg/TheRealPhoenixBot"
+   "name": "devil_spy",
+   "repository": "https://github.com/arunbreghu/group-help"
 }
